# ClickTypes

./: .gitignore  README.md  pyproject.toml
clicktypes/: __init__.py
tests/: simple.py  test_click_types.py
