[tool.poetry]
name = "clicktypes"
version = "0.1.0"
description = ""
authors = ["jdidion <github@didion.net>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "7.0+"
docparse = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
